mediacentral/cloud-ux/versions/2025.10.5/readme.md
---
product: mediacentral-cloud-ux
product-area: newsroom-platform
version: "2025.10.5"
release-date: 01/10/2025
doc-type: readme
source: pdf
confidentiality: public
date-added: 14/05/2026
status: current
---

Installation and Prerequisites ™ Avid MediaCentral | Cloud UX ReadMe Version 2025.10.5 Avid recommends that you read all the information in this ReadMe file thoroughly before installing or using any new software release.
For the latest information on this release, see the following page on the Avid Knowledge Base:
https://kb.avid.com/articles/en_US/readme/MediaCentral-Cloud-UX-v2025-Documentation Revision History Date Revised Changes Made May 13, 2026 Initial v2025.10.5 publication Installation and Prerequisites Avid MediaCentral Cloud UX v2025.10.5 is a patch release that includes new features or fixes for issues found in the product following the initial software release. Patch releases are cumulative and include all of the updates found in prior patch releases of the same series. This feature-pack-only release requires a prior installation of MediaCentral Cloud UX v2025.10.x.
For details on the specific issues fixed in this release, see Fixed in Version 2025.10.5.
New Features in MediaCentral Cloud UX 2025.10.5 New Features in MediaCentral Cloud UX 2025.10.5 The following features are new for this release.
Wolftech News This release upgrades the Wolftech Workflow Engine (WFE) to v16. To maintain compatibility, you must ensure that your Wolftech News backend is also running version 16.
New Features in MediaCentral Cloud UX 2025.10.1 The following features are new for this release.
Distributed Processing Assigning Workers to Groups When working in the Distributed Processing Workers app, you can now drag and drop multiple workers to a different Worker Group. Prior to this update, you could drag and drop only one worker at a time.
Updating the MediaCentral Cloud UX System The steps required to install this patch on single-server configurations or clustered configurations are similar. Any variations for clustered systems are noted in the following process by a “cluster-only” identifier. If you are familiar with the process to install a new MediaCentral Cloud UX server, the following steps should look very familiar to you. As such, you can reference the Avid MediaCentral | Cloud UX Installation Guide for additional information on many of the topics referenced below.
The first three nodes in a MediaCentral Cloud UX cluster are known as control plane nodes. When you initially installed and configured the cluster, you were asked to define a “primary” control plane node.
When installing the patch on a cluster, you must execute all commands from this primary node.
The following upgrade process applies to both single and multi-site environments. There are no specific or custom steps required for a multi-zone configuration.
> **Note:** If you experience any issues with the MediaCentral Cloud UX user interface directly after upgrading
your servers, you might try clearing the browser cache on your local workstation as an initial troubleshooting step.
To install the MediaCentral Cloud UX patch:
1. Use a terminal application to log in to your single-server or primary node.
2. (cluster only) Identify your “primary” node.
service-host-inventory.json The primary node is the only node in the cluster that includes a file at /etc. Select a node in your cluster and enter the following command to determine if the system configuration files are present on this node:
sudo ls /etc/ If you see the file listed, you've found the primary node. If you do not see the file, issue the command on each of your cluster nodes until you find the primary.
3. Copy the Feature Pack ISO to a temporary location on your server.
For assistance with this process, see "Copying Software to the MCUX Server" in the Avid MediaCentral Cloud UX | Installation Guide.
Updating the MediaCentral Cloud UX System
4. Enter the following command to import the updates included in this release:
sudo avidctl platform import /<path>/mediacentral_feature_packs_ <version>.iso The import process automatically mounts and dismounts the ISO to your system.
5. Use the following command to deploy the features included in this release:
sudo avidctl platform deploy --skip-feature-pack-import -i The script checks the Kubernetes Config Store to verify the existence of the system configuration files. If the script finds the configuration files, it reports the status of each file [OK]. If the script cannot find the files, it alerts you to the situation and provides you with an opportunity to abort the installation and resolve the issue.
When you use the --skip-feature-pack-import switch, the script suppresses the "import features" prompt. You are not required to import the feature packs because that process was completed as part of step 4.
6. Next, you must determine which feature packs should be upgraded, installed, or removed.
The script prompts you with a series of yes or no questions. Each prompt is associated with a default value which is identified as a capital Y for yes or N for no. If the script determines that the feature pack is already installed, the default value is Y. If the feature pack is not installed, the default value is N. Do one of the following:
- Press the Enter key to accept the default value.
- Y y)
Press (or to upgrade or install the feature pack.
- N n)
Press (or to skip or uninstall this feature pack.
If your existing installation includes a feature pack that you no longer want to use, you can enter N at the prompt to remove the feature pack from your existing installation.
The feature pack installation process begins. Be patient as this process can take some time.
7. After the installation is complete, you can use the following command to verify that the required
feature packs have been installed:
sudo helm ls The command should report 2025.10.5-v0006-G6a6c416 as App Version for all upgraded components.
8. (recommended) Verify and if necessary, update your certificates.
As part of this upgrade process, Avid recommends that you verify the expiration dates of your deployed certificates. If you are nearing the certificate’s expiration date, you might want to take the opportunity to deploy a new certificate to avoid any potential connection issues for your users.
a. Verify your TLS certificate’s expiration date.
For more information, see “Verifying the SSL Certificate” and “Creating Certificate Files” in the Avid MediaCentral | Cloud UX Installation Guide.
b. Verify your Kubernetes certificate’s expiration date.
For more information, see “Understanding Kubernetes Certificates” in the Avid MediaCentral | Cloud UX Installation Guide.
Limitations in 2025.10.5 Limitations in 2025.10.5 This section includes information on known limitations and defects related to MediaCentral Cloud UX.
Search Bug Number: IPI-3873, IPI-3953. Complex Media Composer sequences that should be found through the Search app might not be included in the Results list.
Originally listed as Fixed in the 2025.10.4 ReadMe, this issue was reopened for further investigation.
Fixed in Version 2025.10.5 Avid Production Management Bug Number: ASSETS-5238. The Avid Production Management CTC service may fail to authenticate an Avid Production Management entitlement for a few minutes after the service starts, causing delayed licensing in MediaCentral Cloud UX.
CTMS Datamodel Aggregator Bug Number: ASSETS-5160. The Search App encountered an error and is temporarily unavailable – restarting the ‘avid-ctms-datamodel-aggregator-core’ pod makes the Search app functional again.
To address the issue, the logging mechanism of the Datamodel Aggregator has been enhanced. Whenever an internal error appears, the causal Exception will now be logged, even if it has no message.
Wolftech News Bug Number: JP-10280. When using the Wolftech app's Open In News feature, the Wolftech app is pushed to the Docked area of the MediaCentral Cloud UX user interface and becomes stuck there.
Fixed in Version 2025.10.4 System Bug Number: PRS-4266. This release updates MongoDB to v8.2.3 to address security concerns raised in CVE-2025-14847. For more information on that issue, see https://nvd.nist.gov/vuln/detail/CVE-2025- 14847.
MediaCentral Acquire Bug Number: CCUX-11410. Avid Stream IO SRT Playout and Ingest templates both appear in the Acquire Channel View Select Source drop-down list, causing incorrect channel options to be displayed. A playout routing template filter has been added, and the list now shows only the relevant channels.
Bug Number: CCUX-11420. Deleting a recording leaves the associated channel in a reserved state and prevents new recordings from starting. The system displays a “No free channels to allocate” message even though the channel is available on the Avid Stream IO server.
Fixed in Version 2025.10.3 Bug Number: CCUX-11421. Recordings longer than six hours fail in Acquire even when segmentation is enabled. Acquire attempts to cue the full recording duration instead of the segment duration, causing the cue request to exceed the supported limit.
Bug Number: CCUX-11422. Workspaces appear in a non-alphabetical order in the Acquire client when creating a recording.
Bug Number: CCUX-11444. Sources appear in a non-alphabetical order in the Acquire Source View.
Bug Number: CCUX-11445. In segmented recording scenarios that include mixed short and long durations, check-in operations fail and segment durations are reported incorrectly.
Bug Number: CCUX-11446. Acquire does not control the video router via RS/ProxyServer and cannot save the configuration, even though COM ports are detected.
To address this issue, the 2025.10.4 release includes a new version of the MediaCentral Router Control Serial Port Proxy Service. For more information about this service, see "Using Serial Connections with Router Control" on page 122 of the Avid MediaCentral Cloud UX Installation Guide v2025.10.
Bug Number: CCUX-11456. Some segmented recordings scheduled in Acquire do not start and remain stuck in the Starting state.
Bug Number: CCUX-11461. The Retransfer option returns an error immediately when used on a completed recording.
Bug Number: CCUX-11467. Sources configured with a Static Routing Type do not appear in the Acquire Source View, and some recordings are not displayed.
Bug Number: CCUX-11468. Recordings started in List View cannot be stopped from that view and display the error “Error deleting recording(s). Some of the recordings did not stop!” Fixed in Version 2025.10.3 Log App Bug Number: MX-10349. When you re-open your session, you cannot see the spans you created.
Rules Engine Bug Number: MAM-21512. AM Orchestration actions fail with an “Could not find principal with id” error after an update to MediaCentral Cloud UX 2025.10.x.
System Bug Number: ASSETS-5138. The lock contention of the pam-ctc-pam service has been improved for cases with a high number of MediaCentral Production Management requests to the this service.
Fixed in Version 2025.10.2 Fixed in Version 2025.10.2 Search App Bug Number: RCTR-3162. After disabling the All Attributes toggle in the Search app’s In-Line Hits window, the app does not display the Show/Hide Stratum Name toggle context menu.
System Bug Number: MTTO-4937. If a MediaCentral cluster node goes down, RabbitMQ queues on that node might become "stuck". These queues cannot be picked up by another node which can cause failures on the remaining nodes.
Fixed in Version 2025.10.1 Distributed Processing Bug Number: SYN-2621, SYN-2624. You cannot cancel, pause or change the priority of a Distribute Processing job through the MediaCentral Cloud UX Process app. If you attempt to do so, MediaCentral Cloud UX displays a "Can not perform operation on job" error after a short delay.
Media Analytics Gateway Bug Number: MAM-21406. The maximum delay of the provider job query is not respected and thus the delay is growing indefinitely. Completing Media Analytics jobs might take an extremely long time.
Process App Bug Number: RCTR-3155. You cannot create new favorites in the Process app. The Create a New Favorite action fails without any message.
Search App Bug Number: RCTR-3148. After adding markers to an Avid Production Management asset, you cannot see these markers in the Timeline view of the In-Line Hits window.
> **Note:** Although the markers do not appear in In-Line Hits, you can view the markers in the Storyboard tab,
and you can continue to use the Search app to find the marker text.
Wolftech News Bug Number: None. MediaCentral Cloud UX v2025.10.0 includes a version of the wolftech-workflow- engine component that is incompatible with the other Wolftech components in this release. This update installs the correct version of the wolftech-workflow-engine.
Fixed in Version 2025.10.1